# OpenClassrooms

./: .gitignore  README.md
Projet 1 - Démarrez votre formation de AI Engineer/: Presentation.pptx  README.md
Projet 10 -/: README.md  pyproject.toml
Projet 10 -/api/: api.py
Projet 10 -/api/functions/: item_based.py  popularity.py  session_based.py  svd.py
Projet 10 -/app/: app.py
Projet 10 -/notebooks/: EDA.ipynb  RecommendationSystem.ipynb
Projet 2 - Participez à un concours sur la Smart City/: .gitignore  README.md  main.ipynb  (+2 more)
Projet 8 - Traitez les images pour le système embarqué dune voiture autonome/: hello.py  pyproject.toml
Projet 8 - Traitez les images pour le système embarqué dune voiture autonome/Projet8/VuilleminEthan_1_scripts_18062025/: P8_deeplabv3+.ipynb  P8_unet.ipynb  Test_models_predictions.ipynb  recherche preliminaire.ipynb
Projet 8 - Traitez les images pour le système embarqué dune voiture autonome/Projet8/VuilleminEthan_2_API_18062025/: main.py  requirements.txt  utils.py
Projet 8 - Traitez les images pour le système embarqué dune voiture autonome/Projet8/VuilleminEthan_3_App_18062025 - Copie/: main.py
Projet 8 - Traitez les images pour le système embarqué dune voiture autonome/Projet8/VuilleminEthan_3_App_18062025 - Copie/transformations/: ai_model.py  simple_cv.py
Projet 8 - Traitez les images pour le système embarqué dune voiture autonome/app/: main.py
Projet 8 - Traitez les images pour le système embarqué dune voiture autonome/notebooks/: P8_unet copy.ipynb  P8_unet.ipynb  Test_models_predictions.ipynb  Untitled7.ipynb  cv-example.ipynb  data-cleaning.ipynb  notebook1.ipynb
Projet 9 -/rag/advance_app/: .dockerignore  .env  Dockerfile  app.py  chainlit.md  docker-compose.yml  pyproject.toml  rag_simple_.py  requirements.txt
Projet 9 -/rag/advance_app/vectorstore/faiss_index/: index.faiss  index.pkl
Projet 9 -/rag/app_simple/: .env  README.md  app.py  personas.json  prompts.json  pyproject.toml  rag_avance.py  rag_simple.py  requirements.txt
(+81 files in other folders)
