[project]
name = "projet10"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "gradio>=5.49.1",
    "kaleido>=1.1.0",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "plotly>=6.3.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "sweetviz>=2.3.1",
]
