[project]
name = "projet8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "gradio>=5.35.0",
    "opencv-python>=4.11.0.86",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipynb>=0.5.1",
]
