[project]
name = "advanced-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.8.3",
    "faiss-cpu>=1.12.0",
    "huggingface-hub>=0.35.3",
    "langchain-mistralai>=0.2.12",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.35",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=0.6.8",
    "pypdf>=6.1.1",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
